--- a/cartelera.html
+++ b/cartelera.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global-style.css">
     <link rel="stylesheet" href="./assets/css/index-style.css">
+    <link rel="stylesheet" href="./assets/css/cartelera-styke.css">
 </head>
 
 <body>
@@ -42,51 +43,87 @@
 
     <div class="contenedor"><img src="./assets/imgs/banner1.jpg"></div>
 
-    <div class="contenedor new">
-        <h3>LO MAS RECIENTE</h3>
-        <div class="grid-new">
-            <div class="img-vessel">
-                <img src="./assets/imgs/peli1.jpg" class="movimg">
+    <div class="contenedor show">
+        <h2>CARTELERA</h2>
+        <div class="grid-show">
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/imgs/peli2.jpg">
+                    <div><a>COMPRAR</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
             </div>
-            <div class="img-vessel">
-                <img src="./assets/imgs/peli2.jpg" class="movimg">
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/imgs/peli3.jpg">
+                    <div><a>COMPRAR</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
             </div>
-            <div class="img-vessel">
-                <img src="./assets/imgs/peli3.jpg" class="movimg">
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/imgs/peli4.jpg">
+                    <div><a>COMPRAR</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
             </div>
-            <div class="img-vessel">
-                <img src="./assets/imgs/peli4.jpg" class="movimg">
-            </div>
-            <div class="img-vessel">
-                <img src="./assets/imgs/peli5.jpg" class="movimg">
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/imgs/peli5.jpg">
+                    <div><a>COMPRAR</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class=" contenedor promo">
-        <h2>PROMOS</h2>
-        <div class="grid-promo">
-            <div class="promimg">
-                <p class="promo-head">MIERCOLES</p>
-                <p class="promo-sub">de bocadillos</p>
-                <P class="promo-body">Todas las botanas, golosinas y bebidas al...</P>
-                <p class="promo-foot">-30%</p>
-            </div>
-            <div class="promimg">
-                <p class="promo-head">VIERNES</p>
-                <p class="promo-sub">de descanso</p>
-                <P class="promo-body">Celebrando el fin de semana con funcion al...</P>
-                <p class="promo-foot">-50%</p>
-            </div>
-            <div class="promimg">
-                <p class="promo-head">SABADO</p>
-                <p class="promo-sub">de parejas</p>
-                <P class="promo-body">Entretenimiento para los tortolitos con funcion y botanas al...</P>
-                <p class="promo-foot">-25%</p>
-            </div>
-        </div>
-    </div>
-
 
     <footer class="site-footer contenedor">
         <div class="redes">
