--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Grupo #1 Diseño de compiladores 2PAC 2022">
-    <title>Cine-Sistemas</title>
+    <title>Contacto | Cine-Sistemas</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/index-style.css">
+    <link rel="stylesheet" href="./assets/css/contact-style.css">
 </head>
 <body>
     <header class="contenedor">
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="auth">
-            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
+            <button class="btn-prim">Iniciar Sesión</button>
         </div>
     </header>
 
@@ -37,9 +37,69 @@
     </nav>
 
     <!--Inicio contenido de la pagina-->
+    <main class="contenedor">
+        <h1>Contáctenos</h1>
+        <div class="panel">
+            <p><b>Correo electronico:</b><br> cinesistemas@gmail.com</p>
+            <p><b>Telefonos:</b><br> Sede Santa Rosa: (+504) 2662-1234  
+                <br> Sede San Pedro Sula: (+504) 2552-1234 </p>
+        </div>
 
+        <h2 id="sugerencias">Envienos sus reservaciones o sugerencias</h2>
+        <div class="panel">
+            <div class="grid-contact">
+                <div>
+                    <form action="">
+                        <label for="">Complejo</label>
+                        <select name="" id="">
+                            <option value="0">Seleccione un complejo</option>
+                        </select><br>
+                        <label for="">Nombre</label>
+                        <input type="text" name="" id=""><br>
+                        <label for="">Apellido</label>
+                        <input type="text" name="" id=""><br>
+                        <label for="">Email</label>
+                        <input type="email" name="" id=""><br>
+                        <label for="">Telefono</label>
+                        <input type="tel" name="" id=""><br>
+                        <label for="">Mensaje</label><br>
+                        <textarea name="" id="" cols="34" rows="5"></textarea><br>
+                        <input type="submit" class="btn-ter" value="Enviar">
+                        <p class="error" id="err-sugerencias"></p>
+                    </form>
+                </div>
+                <img src="./assets/images/sugerencias.png" alt="">
+            </div>
+        </div>
 
-
+        <h2 id="contratacion">Trabaja con nosotros</h2>
+        <div class="panel contratacion">
+            <div class="grid-contact">
+                <div>
+                    <p>Estamos requiriendo personal para los puestos de: <br>
+                        <ul>
+                            <li>Atencion en ventanilla</li>
+                            <li>Venta de botanas</li>
+                            <li>Limpieza</li>
+                            <li>Guardia de seguridad</li>
+                        </ul></p>
+                        <p>Requisitos esperados: <br>
+                            <ul>
+                                <li>1 año de experiencia en atencion al cliente</li>
+                                <li>Buena presentacion</li>
+                                <li>Disponibilidad de horario</li>
+                            </ul></p>  
+                </div>
+                <img src="./assets/images/contratacion.png" alt="">
+            </div> 
+            <form class="curriculum" action="">
+                <label><b>Adjunte aquí su Curriculum Vitae</b></label><br> 
+                <input type="file" name="" id="">
+                <input type="submit" class="btn-ter" value="Enviar">
+                <p class="error" id="err-contratacion"></p>
+            </form>
+        </div>
+    </main>
 
     <!--Final contenido de la pagina-->
             
@@ -48,17 +108,17 @@
             <a href="https://www.facebook.com/search/top/?q=cinesistemassrc" target="_blank" class="red">
                 <img src="./assets/images/logo-facebook.png" alt="Facebook">
                 Facebook
-                <span>CineSistemasSRC</span>
+                <span for="">CineSistemasSRC</span>
             </a>
             <a href="https://twitter.com/search?q=cinesistemas%20src" target="_blank" class="red">
                 <img src="./assets/images/logo-twitter.png" alt="Twitter">
                 Twitter
-                <span>CineSistemasSRC</span>
+                <span for="">CineSistemasSRC</span>
             </a>
             <a href="https://www.instagram.com/cinesistemassrc/" target="_blank" class="red">
                 <img src="./assets/images/logo-instagram.png" alt="Instagram">
                 Instagram
-                <span>CineSistemasSRC</span>
+                <span for="">CineSistemasSRC</span>
             </a>
         </div>
 
