Union paginas Chris

--- a/preventa.html
+++ b/preventa.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Grupo #1 Diseño de compiladores 2PAC 2022">
-    <title>Cine-Sistemas</title>
+    <title>Preventa | Cine-Sistemas</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/index-style.css">
+    <link rel="stylesheet" href="./assets/css/cartelera-style.css">
 </head>
 <body>
     <header class="contenedor">
@@ -38,49 +38,84 @@
 
     <div class="contenedor"><img src="./assets/images/banner1.jpg"></div>
 
-    <div class="contenedor new">
-        <h2>Lo mas reciente</h2>
-        <div class="grid-new">
-            <div class="img-vessel">
-                <img src="./assets/images/peli1.jpg" class="movimg">
-            </div>
-            <div class="img-vessel">
-                <img src="./assets/images/peli2.jpg" class="movimg">
-            </div>
-            <div class="img-vessel">
-                <img src="./assets/images/peli3.jpg" class="movimg">
-            </div>
-            <div class="img-vessel">
-                <img src="./assets/images/peli4.jpg" class="movimg">
-            </div>
-            <div class="img-vessel">
-                <img src="./assets/images/peli5.jpg" class="movimg">
-            </div>
-        </div>
-    </div>
+    <div class="contenedor show">
+        <h2 id="preventa">PREVENTA</h2>
+        <div class="grid-show">
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/images/peli1.jpg">
+                    <div><a href="" class="btn-sec">Comprar</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
 
-    <div class="contenedor">
-        <div class="">
-            <h2>Promociones</h2>
-            <div class="grid-promo">
-                <a href="./promociones.html" class="promimg">
-                    <p class="promo-head">MIERCOLES</p>
-                    <p class="promo-sub">de bocadillos</p>
-                    <P class="promo-body">Todas las botanas, golosinas y bebidas al...</P>
-                    <p class="promo-foot">-30%</p>
-                </a>
-                <a href="./promociones.html" class="promimg">
-                    <p class="promo-head">VIERNES</p>
-                    <p class="promo-sub">de descanso</p>
-                    <P class="promo-body">Celebrando el fin de semana con funcion al...</P>
-                    <p class="promo-foot">-50%</p>
-                </a>
-                <a href="./promociones.html" class="promimg">
-                    <p class="promo-head">SABADO</p>
-                    <p class="promo-sub">de parejas</p>
-                    <P class="promo-body">Entretenimiento para los tortolitos con funcion y botanas al...</P>
-                    <p class="promo-foot">-25%</p>
-                </a>
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
+            </div>
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/images/peli6.jpg">
+                    <div><a href="" class="btn-sec">Comprar</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
+            </div>
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/images/peli7.jpg">
+                    <div><a href="" class="btn-sec">Comprar</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
+            </div>
+            <div class="movie-grid">
+                <div>
+                    <img src="./assets/images/peli8.jpg">
+                    <div><a href="" class="btn-sec">Comprar</a></div>
+                </div>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+
+                    <p style="margin-top: 3rem;">HORARIOS</p>
+                    <p>14:10 PM</p>
+                    <p>16:30 PM</p>
+                    <p>18:50 PM</p>
+                    <p>21:10 PM</p>
+                </div>
             </div>
         </div>
     </div>
