--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,13 @@
             </form>
         </div>
         <div class="auth">
-            <button class="btn-prim">Iniciar Sesión</button>
+            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
         </div>
     </header>
 
     <nav class="nav-principal contenedor">
-        <a href="" class="btn-prim">Cartelera</a>
-        <a href="" class="btn-prim">Pre-venta</a>
+        <a href="./cartelera.html" class="btn-prim">Cartelera</a>
+        <a href="./preventa.html" class="btn-prim">Pre-venta</a>
         <a href="" class="btn-prim">Complejos</a>
         <a href="" class="btn-prim">Promociones</a>
         <a href="" class="btn-prim">Proximamente</a>
@@ -126,9 +126,9 @@
             <div>
                 <h3>Programación</h3>
                 <nav class="footer-menu">
-                    <a href="javascript:void(0);">Cartelera</a>
+                    <a href="./cartelera.html#cartelera">Cartelera</a>
                     <a href="javascript:void(0);">Proximamente</a>
-                    <a href="javascript:void(0);">Preventa</a>
+                    <a href="./preventa.html#preventa">Preventa</a>
                 </nav>
             </div>
 
