Correcciones y agg. espacio vistas faltantes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <nav class="nav-principal contenedor">
         <a href="./cartelera.html" class="btn-prim">Cartelera</a>
         <a href="./preventa.html" class="btn-prim">Pre-venta</a>
-        <a href="" class="btn-prim">Complejos</a>
-        <a href="" class="btn-prim">Promociones</a>
-        <a href="" class="btn-prim">Proximamente</a>
+        <a href="./complejos.html" class="btn-prim">Complejos</a>
+        <a href="./promociones.html" class="btn-prim">Promociones</a>
+        <a href="./proximamente.html" class="btn-prim">Proximamente</a>
         <a href="./contact.html" class="btn-prim">Contacto</a>
     </nav>
 
@@ -109,7 +109,7 @@
                 <h3>Programación</h3>
                 <nav class="footer-menu">
                     <a href="./cartelera.html#cartelera">Cartelera</a>
-                    <a href="javascript:void(0);">Proximamente</a>
+                    <a href="./proximamente.html#proximamente">Proximamente</a>
                     <a href="./preventa.html#preventa">Preventa</a>
                 </nav>
             </div>
