--- a/proximamente.html
+++ b/proximamente.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Grupo #1 Diseño de compiladores 2PAC 2022">
-    <title>Contacto | Cine-Sistemas</title>
+    <title>Preventa | Cine-Sistemas</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/contact-style.css">
+    <link rel="stylesheet" href="./assets/css/proximamente-style.css">
 </head>
 <body>
     <header class="contenedor">
@@ -36,89 +36,54 @@
         <a href="./contact.html" class="btn-prim">Contacto</a>
     </nav>
 
-    <!--Inicio contenido de la pagina-->
-    <main class="contenedor">
-        <h1>Contáctenos</h1>
-        <div class="panel">
-            <p><b>Correo electronico:</b><br> cinesistemas@gmail.com</p>
-            <p><b>Telefonos:</b><br> Sede Santa Rosa: (+504) 2662-1234  
-                <br> Sede San Pedro Sula: (+504) 2552-1234 </p>
-        </div>
-
-        <h2 id="sugerencias">Envienos sus reservaciones o sugerencias</h2>
-        <div class="panel">
-            <div class="grid-contact">
+    <div class="contenedor show">
+        <br>
+        <h2 id="proximamente">PROXIMAMENTE</h2>
+        <div class="grid-show">
+            <div class="movie-grid">
                 <div>
-                    <form action="">
-                        <label for="">Complejo</label>
-                        <select name="" id="">
-                            <option value="0">Seleccione un complejo</option>
-                        </select><br>
-                        <label for="">Nombre</label>
-                        <input type="text" name="" id=""><br>
-                        <label for="">Apellido</label>
-                        <input type="text" name="" id=""><br>
-                        <label for="">Email</label>
-                        <input type="email" name="" id=""><br>
-                        <label for="">Telefono</label>
-                        <input type="tel" name="" id=""><br>
-                        <label for="">Mensaje</label><br>
-                        <textarea name="" id="" cols="34" rows="5"></textarea><br>
-                        <input type="submit" class="btn-ter" value="Enviar">
-                        <p class="error" id="err-sugerencias"></p>
-                    </form>
+                    <img src="https://es.web.img3.acsta.net/pictures/22/02/18/10/20/5195258.jpg">
                 </div>
-                <img src="./assets/images/sugerencias.png" alt="">
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+                </div>
             </div>
-        </div>
-
-        <h2 id="contratacion">Trabaja con nosotros</h2>
-        <div class="panel contratacion">
-            <div class="grid-contact">
+            <div class="movie-grid">
                 <div>
-                    <p>Estamos requiriendo personal para los puestos de: <br>
-                        <ul>
-                            <li>Atencion en ventanilla</li>
-                            <li>Venta de botanas</li>
-                            <li>Limpieza</li>
-                            <li>Guardia de seguridad</li>
-                        </ul></p>
-                        <p>Requisitos esperados: <br>
-                            <ul>
-                                <li>1 año de experiencia en atencion al cliente</li>
-                                <li>Buena presentacion</li>
-                                <li>Disponibilidad de horario</li>
-                            </ul></p>  
+                    <img src="https://pics.filmaffinity.com/Lightyear-529062623-mmed.jpg">
                 </div>
-                <img src="./assets/images/contratacion.png" alt="">
-            </div> 
-            <form class="curriculum" action="">
-                <label><b>Adjunte aquí su Curriculum Vitae</b></label><br> 
-                <input type="file" name="" id="">
-                <input type="submit" class="btn-ter" value="Enviar">
-                <p class="error" id="err-contratacion"></p>
-            </form>
-        </div>
-    </main>
+                <div class="text-movie">
+                    <p style="margin-top: 2rem;">- ESPAÑOL</p>
+                    <p>- TODO PUBLICO</p>
+                    <p>- ACCION</p>
+                    <p>- 120 MIN.</p>
+                    <p>- 2D DIGITAL</p>
+                </div>
+            </div>
 
-    <!--Final contenido de la pagina-->
-            
+        </div>
+    </div>
+
     <footer class="site-footer contenedor">
         <div class="grid-redes">
             <a href="https://www.facebook.com/search/top/?q=cinesistemassrc" target="_blank" class="red">
                 <img src="./assets/images/logo-facebook.png" alt="Facebook">
                 Facebook
-                <span for="">CineSistemasSRC</span>
+                <span>CineSistemasSRC</span>
             </a>
             <a href="https://twitter.com/search?q=cinesistemas%20src" target="_blank" class="red">
                 <img src="./assets/images/logo-twitter.png" alt="Twitter">
                 Twitter
-                <span for="">CineSistemasSRC</span>
+                <span>CineSistemasSRC</span>
             </a>
             <a href="https://www.instagram.com/cinesistemassrc/" target="_blank" class="red">
                 <img src="./assets/images/logo-instagram.png" alt="Instagram">
                 Instagram
-                <span for="">CineSistemasSRC</span>
+                <span>CineSistemasSRC</span>
             </a>
         </div>
 
