Reordenamiento e incorporacion de nuevas vistas

--- a/admin/edit-dia.html
+++ b/admin/edit-dia.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Grupo #1 Diseño de compiladores 2PAC 2022">
     <title>Editar dia | Cine-Sistemas</title>
-    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/edit-dia-style.css">
+    <link rel="stylesheet" href="../assets/css/global-style.css">
+    <link rel="stylesheet" href="../assets/css/edit-dia-style.css">
 </head>
 <body>
     <header class="modal-contenedor">
