--- a/cartelera.html
+++ b/cartelera.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="auth">
-            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
+            <a href="./auth/login.html" class="btn-prim">Iniciar Sesión</a>
         </div>
     </header>
 
@@ -43,7 +43,7 @@
         <div class="grid-show">
             <div class="movie-grid">
                 <div>
-                    <img src="./assets/images/peli2.jpg">
+                    <a href="./info/info-pelicula.html" class="info"><img src="./assets/images/peli2.jpg" class="movimg"></a>
                     <div><a href="" class="btn-sec">Comprar</a></div>
                 </div>
                 <div class="text-movie">
@@ -62,7 +62,7 @@
             </div>
             <div class="movie-grid">
                 <div>
-                    <img src="./assets/images/peli3.jpg">
+                    <a href="./info/info-pelicula.html" class="info"><img src="./assets/images/peli3.jpg" class="movimg"></a>
                     <div><a href="" class="btn-sec">Comprar</a></div>
                 </div>
                 <div class="text-movie">
@@ -81,7 +81,7 @@
             </div>
             <div class="movie-grid">
                 <div>
-                    <img src="./assets/images/peli4.jpg">
+                    <a href="./info/info-pelicula.html" class="info"><img src="./assets/images/peli4.jpg" class="movimg"></a>
                     <div><a href="" class="btn-sec">Comprar</a></div>
                 </div>
                 <div class="text-movie">
@@ -100,7 +100,7 @@
             </div>
             <div class="movie-grid">
                 <div>
-                    <img src="./assets/images/peli5.jpg">
+                    <a href="./info/info-pelicula.html" class="info"><img src="./assets/images/peli5.jpg" class="movimg"></a>
                     <div><a href="" class="btn-sec">Comprar</a></div>
                 </div>
                 <div class="text-movie">
