--- a/complejos.html
+++ b/complejos.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/promociones-style.css">
+    <link rel="stylesheet" href="./assets/css/complejos-style.css">
 </head>
 
 <body>
@@ -42,12 +42,18 @@
 
     <h2 class="text-center">Complejos</h2>
     <main class="contenedor">
-        <div class="panel">
-            <select name="" id="">
-                <option value="0">Selecciona un complejo</option>
-            </select><br>
-            Hacer area para imagen y para mapa
-            Hacer letras de direccion y formatos de sala disponibles
+        <div class="panel grid-complejos">
+            <div>
+                <select name="" id="">
+                    <option value="0">Santa Rosa de Copán</option>
+                </select><br>
+                <img src="./assets/images/complejo-santarosa.png" alt="Santa Rosa">
+            </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d1928.868050746023!2d-88.7799639!3d14.7838889!3m2!1i1024!2i768!4f13.1!2m1!1sgoogle%20maps%20metrocinemas%20santa%20rosa%20de%20copan!5e0!3m2!1ses-419!2shn!4v1660327262846!5m2!1ses-419!2shn" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p><b>Direccion:</b>Mall Uniplaza, Santa Rosa de Copán</p>
+                <p><b>Formatos de Sala:</b> 2D Digital y 3D Digital</p>
+            </div>
         </div>
     </main>
 
