--- a/preventa.html
+++ b/preventa.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="auth">
-            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
+            <a href="./auth/login.html" class="btn-prim">Iniciar Sesión</a>
         </div>
     </header>
 
@@ -43,7 +43,7 @@
         <div class="grid-show">
             <div class="movie-grid">
                 <div>
-                    <img src="./assets/images/peli1.jpg">
+                    <a href="./info/info-pelicula.html" class="info"><img src="./assets/images/peli1.jpg" class="movimg"></a>
                     <div><a href="" class="btn-sec">Comprar</a></div>
                 </div>
                 <div class="text-movie">
