--- a/admin/edit-cartelera.html
+++ b/admin/edit-cartelera.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Grupo #1 Diseño de compiladores 2PAC 2022">
     <title>Editar Cartelera | Cine-Sistemas</title>
-    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/global-style.css">
-    <link rel="stylesheet" href="./assets/css/edit-cartelera-style.css">
+    <link rel="stylesheet" href="../assets/css/global-style.css">
+    <link rel="stylesheet" href="../assets/css/edit-cartelera-style.css">
 </head>
 <body>
     <header class="contenedor">
-        <a href="./index.html">
-            <h1 class="nombre-sitio">Cine-Sistemas</h1>
-        </a>
-        <h2 class="empleados">Portal Empleados</h2>
+        <a href="../index.html"><h1 class="nombre-sitio">Cine-Sistemas</h1></a>
+        <a href="./index.html"><h1 class="nombre-sitio">Portal Empleados</h1></a>
         <div class="auth">
-            <a href="./index.html" class="btn-prim">Cerrar Sesión</a>
+            <a href="../index.html" class="btn-prim">Cerrar Sesión</a>
         </div>
     </header>
     <main class="contenedor">
