--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="auth">
-            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
+            <a href="./auth/login.html" class="btn-prim">Iniciar Sesión</a>
         </div>
     </header>
 
