--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="auth">
-            <a href="./login.html" class="btn-prim">Iniciar Sesión</a>
+            <a href="./auth/login.html" class="btn-prim">Iniciar Sesión</a>
         </div>
     </header>
 
@@ -36,25 +36,25 @@
         <a href="./contact.html" class="btn-prim">Contacto</a>
     </nav>
 
-    <div class="contenedor"><img src="./assets/images/banner1.jpg"></div>
+    <div class="contenedor"><a href="./info/info-pelicula.html"><img src="./assets/images/banner1.jpg"></a></div>
 
     <div class="contenedor new">
         <h2>Lo mas reciente</h2>
         <div class="grid-new">
             <div class="img-vessel">
-                <img src="./assets/images/peli1.jpg" class="movimg">
+                <a href="./info/info-pelicula.html"><img src="./assets/images/peli1.jpg" class="movimg"></a>
             </div>
             <div class="img-vessel">
-                <img src="./assets/images/peli2.jpg" class="movimg">
+                <a href="./info/info-pelicula.html"><img src="./assets/images/peli2.jpg" class="movimg"></a>
             </div>
             <div class="img-vessel">
-                <img src="./assets/images/peli3.jpg" class="movimg">
+                <a href="./info/info-pelicula.html"><img src="./assets/images/peli3.jpg" class="movimg"></a>
             </div>
             <div class="img-vessel">
-                <img src="./assets/images/peli4.jpg" class="movimg">
+                <a href="./info/info-pelicula.html"><img src="./assets/images/peli4.jpg" class="movimg"></a>
             </div>
             <div class="img-vessel">
-                <img src="./assets/images/peli5.jpg" class="movimg">
+                <a href="./info/info-pelicula.html"><img src="./assets/images/peli5.jpg" class="movimg"></a>
             </div>
         </div>
     </div>
