--- a/auth/register.html
+++ b/auth/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +14,11 @@
     <link rel="stylesheet" href="../assets/css/global-style.css">
     <link rel="stylesheet" href="../assets/css/login-style.css">
 </head>
+
 <body>
     <header class="modal-contenedor">
         <a href="./login.html" class="inactive">Iniciar Sesión</a>
-        <a href="" class="active">Registrarse</a>
+        <a href="./regnew.html" class="active">Registrarse</a>
     </header>
     <main class="modal-contenedor">
         <div class="panel">
@@ -32,4 +34,5 @@
         <p>¿Olvidó su contraseña? Pruebe con las <a href="./recovery.html" class="recuperacion">Opciones de Recuperación</a></p>
     </main>
 </body>
+
 </html>
