--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +14,12 @@
     <link rel="stylesheet" href="./assets/css/global-style.css">
     <link rel="stylesheet" href="./assets/css/index-style.css">
 </head>
+
 <body>
     <header class="contenedor">
-        <a href="./index.html"><h1 class="nombre-sitio">Cine-Sistemas</h1></a>
+        <a href="./index.html">
+            <h1 class="nombre-sitio">Cine-Sistemas</h1>
+        </a>
         <div class="barra-busqueda">
             <form action="">
                 <input type="text" name="contenido-busqueda" class="input-busqueda" placeholder="Buscar pelicula" id="">
@@ -36,7 +40,9 @@
         <a href="./contact.html" class="btn-prim">Contacto</a>
     </nav>
 
-    <div class="contenedor"><a href="./info/info-pelicula.html"><img src="./assets/images/banner1.jpg"></a></div>
+    <div class="contenedor">
+        <a href="./info/info-pelicula.html"><img src="./assets/images/banner1.jpg"></a>
+    </div>
 
     <div class="contenedor new">
         <h2>Lo mas reciente</h2>
@@ -88,23 +94,20 @@
     <footer class="site-footer contenedor">
         <div class="grid-redes">
             <a href="https://www.facebook.com/search/top/?q=cinesistemassrc" target="_blank" class="red">
-                <img src="./assets/images/logo-facebook.png" alt="Facebook">
-                Facebook
+                <img src="./assets/images/logo-facebook.png" alt="Facebook"> Facebook
                 <span>CineSistemasSRC</span>
             </a>
             <a href="https://twitter.com/search?q=cinesistemas%20src" target="_blank" class="red">
-                <img src="./assets/images/logo-twitter.png" alt="Twitter">
-                Twitter
+                <img src="./assets/images/logo-twitter.png" alt="Twitter"> Twitter
                 <span>CineSistemasSRC</span>
             </a>
             <a href="https://www.instagram.com/cinesistemassrc/" target="_blank" class="red">
-                <img src="./assets/images/logo-instagram.png" alt="Instagram">
-                Instagram
+                <img src="./assets/images/logo-instagram.png" alt="Instagram"> Instagram
                 <span>CineSistemasSRC</span>
             </a>
         </div>
 
-        <div class="grid-footer">        
+        <div class="grid-footer">
             <div>
                 <h3>Programación</h3>
                 <nav class="footer-menu">
@@ -143,4 +146,5 @@
         <p class="copyright">Copyright 2022 - Cine-Sistemas</p>
     </footer>
 </body>
+
 </html>
