--- a/promociones.html
+++ b/promociones.html
@@ -44,20 +44,31 @@
     <main class="contenedor">
         <div class="flex-promociones">
             <div class="panel">
-                <h3>MIERCOLES</h3>
-                <h4>de bocadillos <br> todas las botanas. <br> golosinas y bebidas <br> al... <h3> <br> -30%</h3>
-                </h4>
+                <img class="tamImg" src="./assets/images/istockphoto-1087303184-612x612.jpg" alt="">
+                <div class="divProm">
+                    <h3 class="tit">MIERCOLES</h3>
+                    <h4 class="titCua">de bocadillos <br> todas las botanas. <br> golosinas y bebidas al... <h3>-30%</h3>
+                    </h4>
+                    <button class="btn-Prom">Detalles</button>
+                </div>
             </div>
             <div class="panel">
-                <h3>VIERNES </h3>
-                <h4>de descanso <br> celebrando el fin de semana con una funcion al... <h3> <br> -50%</h3>
+                <img class="tamImg" src="assets/images/Screenshot 2022-08-16 224554.png" alt="">
+                <div class="divProm">
+                    <h3 class="tit">LUNES MARTES Y JUEVES</h3>
+                    <h4 class="titCua">de descanso <br> celebrando el fin de semana con una funcion al... <h3>-50% </h3><br>
+                    <button class="btn-Prom">Detalles</button>
                 </h4>
+                </div>
             </div>
             <div class="panel">
-                <p>prueba texto panel</p>
-                <h3>SABADO</h3>
-                <h4>de parejas <br> entretenimiento para los tortolitos con funcion y botanas al... <h3> <br> -25%</h3>
-                </h4>
+                <img class="tamImg" src="/assets/images/wq.png" alt="">
+                <div>
+                    <h3 class="tit">SABADO</h3>
+                    <h4 class="">de parejas <br>Descuento de tercera Edad <br>PRECIO ESPECIAL TODOS LOS DÍAS.<h3>-25%</h3>
+                    </h4>
+                    <button class="btn-Prom">Detalles</button>
+                </div>
             </div>
         </div>
     </main>
